[project]
name = "8-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.12.0",
    "ipykernel>=7.2.0",
    "ipyprogress>=0.1.0",
    "matplotlib>=3.10.8",
    "opencv-python-headless>=4.10.0",
    "roboflow>=1.1.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.3.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = ["E402"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
